// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all props 1`] = `
<span
  className="govuk-container lbh-container class1 class2"
  id="test"
>
  Test
</span>
`;

exports[`renders correctly without optional props 1`] = `
<span
  className="govuk-container lbh-container"
>
  Test
</span>
`;
